[gd_scene load_steps=15 format=3 uid="uid://fyqypy6fcyaf"]

[ext_resource type="Script" uid="uid://m5ceg1df4m54" path="res://Scripts/level_4_script.gd" id="1_f0imo"]
[ext_resource type="PackedScene" uid="uid://ciik8gauu5jgn" path="res://Scenes/area_handler.tscn" id="2_lahvx"]
[ext_resource type="PackedScene" uid="uid://ch3clei25cbet" path="res://Scenes/player_scene.tscn" id="4_be8ic"]
[ext_resource type="PackedScene" uid="uid://wspt4mwhafhc" path="res://Scenes/sound_manager.tscn" id="14_yxj7a"]
[ext_resource type="PackedScene" uid="uid://b7k8hh85s26ag" path="res://Scenes/objects/level_4/non_tools/soil.tscn" id="15_be8ic"]
[ext_resource type="PackedScene" uid="uid://wa372vchah3q" path="res://Scenes/objects/level_4/tools/bone.tscn" id="17_mj1vs"]
[ext_resource type="PackedScene" uid="uid://b8rqtsafw44ge" path="res://Scenes/objects/level_4/tools/statues1.tscn" id="18_37es6"]
[ext_resource type="PackedScene" uid="uid://b4fhx7cv5bnqd" path="res://Scenes/objects/level_4/tools/chicken.tscn" id="19_trv2w"]
[ext_resource type="PackedScene" uid="uid://dfuqimqiipdvc" path="res://Scenes/objects/level_4/tools/lizard.tscn" id="20_lahvx"]
[ext_resource type="PackedScene" uid="uid://bn1u7rxapvdbv" path="res://Scenes/objects/level_4/non_tools/dog.tscn" id="21_37es6"]
[ext_resource type="PackedScene" uid="uid://cd6wnkqq2sftc" path="res://Scenes/objects/level_4/non_tools/incubator.tscn" id="22_trv2w"]
[ext_resource type="PackedScene" uid="uid://drft7kjr45005" path="res://Scenes/objects/level_4/tools/seed.tscn" id="23_lahvx"]
[ext_resource type="PackedScene" uid="uid://b564v66w42qm6" path="res://Scenes/objects/level_4/tools/statues2.tscn" id="25_0bs5k"]
[ext_resource type="PackedScene" uid="uid://bxrvbyampevae" path="res://Scenes/objects/level_4/tools/statues3.tscn" id="26_oqr2g"]

[node name="level_4" type="Node2D"]
script = ExtResource("1_f0imo")

[node name="AreaHandler" parent="." instance=ExtResource("2_lahvx")]

[node name="PlayerScene" parent="." instance=ExtResource("4_be8ic")]

[node name="Camera2D" type="Camera2D" parent="."]
rotation = 1.5708
ignore_rotation = false
position_smoothing_enabled = true

[node name="soil" parent="." instance=ExtResource("15_be8ic")]
position = Vector2(158, -272)

[node name="bone" parent="." instance=ExtResource("17_mj1vs")]
position = Vector2(-233.75, -131.175)

[node name="chicken" parent="." instance=ExtResource("19_trv2w")]
position = Vector2(251, -145)

[node name="lizard" parent="." instance=ExtResource("20_lahvx")]
position = Vector2(-272, 162)

[node name="dog" parent="." instance=ExtResource("21_37es6")]
position = Vector2(-230, -131)

[node name="incubator" parent="." instance=ExtResource("22_trv2w")]
position = Vector2(-134, -234)

[node name="seed" parent="." instance=ExtResource("23_lahvx")]
position = Vector2(145, 251)

[node name="statues1" parent="." instance=ExtResource("18_37es6")]
position = Vector2(251, 0)

[node name="statues2" parent="." instance=ExtResource("25_0bs5k")]
position = Vector2(-253, 0)

[node name="statues3" parent="." instance=ExtResource("26_oqr2g")]
position = Vector2(0, 254)

[node name="SoundManager" parent="." instance=ExtResource("14_yxj7a")]
